--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,5 +7,5 @@
     <servlet-name>default</servlet-name>
     <url-pattern>*.css</url-pattern>
   </servlet-mapping>
-  <display-name>daily_report_system</display-name>
+  <display-name>bulletin_board</display-name>
 </web-app>
