--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,7 @@
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.css</url-pattern>
+    <url-pattern>*.jpg</url-pattern>
   </servlet-mapping>
   <display-name>bulletin_board</display-name>
 </web-app>
